--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -90,10 +90,21 @@ th, td {
     width: 300px;
 }
 
+
+
 /* CSS */
+.confirm-delete form div p {
+  font-size: 20px !important;
+  font-weight: 300;
+}
+
+.confirm-delete form {
+  padding: 10px;
+}
+
 .confirm-delete form input {
   appearance: none;
-  background-color: #3575ff;
+  background-color: #3B82F6;
   border: 1px solid rgba(27, 31, 35, 0.15);
   border-radius: 10px;
   box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0, rgba(255, 255, 255, 0.25) 0 1px 0 inset;
@@ -119,7 +130,7 @@ th, td {
 }
 
 .confirm-delete form input:hover {
-  background-color: #3586ff;
+  background-color: #5aa1f8;
   text-decoration: none;
   transition-duration: 0.1s;
 }
@@ -208,6 +219,8 @@ th, td {
   .confirm-delete input.cancel:-webkit-details-marker {
     display: none;
   }
+
+
 
 .edit {
     color: green;
