--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
   padding: 0px;
   margin: 0px;
-  background: #f6f6f6;
+  background: #F3F8FA;
   font-family: "Lora", serif;
 }
 
@@ -20,6 +20,11 @@ h6 {
   font-family: "Roboto Slab", serif;
   color: #0f1920;
   margin: 5px;
+  /* HEADING LENGTH */
+  width: 250px; /* Adjust as needed */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 a {
@@ -220,7 +225,7 @@ header .menu-toggle {
 
 .post-slider .next {
   position: absolute;
-  top: 15%;
+  top: 10%;
   right: 30px;
   font-size: 2em;
   cursor: pointer;
@@ -229,7 +234,7 @@ header .menu-toggle {
 
 .post-slider .prev {
   position: absolute;
-  top: 15%;
+  top: 10%;
   left: 30px;
   font-size: 2em;
   cursor: pointer;
@@ -237,6 +242,8 @@ header .menu-toggle {
 }
 
 .post-slider .post-wrapper {
+  aspect-ratio: 1/1;
+  flex-grow: 1;
   width: 84%;
   height: 350px;
   margin: 0% auto;
@@ -251,15 +258,15 @@ header .menu-toggle {
   display: inline-block;
   background: white;
   text-transform: none;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 1rem 1rem 1rem -1rem #b3b3b3;
 }
 
 .post-slider .post-wrapper .post .slider-image {
   width: 100%;
-  height: 200px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  height: 250px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .post-slider .post-wrapper .post .post-info {
@@ -288,6 +295,14 @@ header .menu-toggle {
   padding: 20px 50px;
   font-size: 1.1em;
   border-radius: 5px;
+  object-fit: contain;
+  text-align: center;
+}
+
+.content .main-content.single img{
+  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .content .main-content.single .post-title {
@@ -306,6 +321,11 @@ header .menu-toggle {
   border-radius: 5px;
   background: white;
   position: relative;
+}
+
+.content .main-content .post img{
+  padding: 15px;
+  border-radius: 10px;
 }
 
 .content .section-popular {
@@ -329,20 +349,71 @@ header .menu-toggle {
   margin-right: 10px;
   margin-bottom: 5px;
 }
-
+/*
 .content .main-content .post .read-more {
   position: absolute;
   bottom: 10px;
   right: 10px;
   border: 1px solid #12232e;
   background: transparent;
-  color: #12232e !important;
+  color: #2c2d36 !important;
 }
 
 .content .main-content .post .read-more:hover {
   background: #12232e;
   color: #ffffff !important;
   transition: all 0.25s;
+}
+*/
+.center{
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center
+}
+
+.content .main-content .post {
+  border-radius: 15px;
+}
+
+.content .main-content .post .read-more {
+  content: "\27A4";
+  font-family: Hack, monospace;
+  background: transparent;
+  border: 1px solid #12232e;
+  color: #2c2d36 !important;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size:1em;
+  padding: 0.75rem;
+  transition: all 0.5s;
+  border-radius: 50px;
+}
+
+
+.content .main-content .post .read-more::after {
+  content: "Read More";
+  font-weight: 400;
+  position: absolute;
+  left: 40%;
+  top: 9%;
+  right: 5%;
+  bottom: 0;
+  opacity: 0;
+  color: whitesmoke !important;
+}
+.content .main-content .post .read-more:hover {
+  background: transparent;
+  transition: all 0.5s;
+  padding: 0.75rem 4.25rem 0.75rem 0.75rem;
+  color: whitesmoke !important;
+  background-color: #444444;
+}
+.content .main-content .post .read-more:hover::after {
+  opacity: 1;
+  transition: all 0.5s;
 }
 
 .content .main-content .post .post-image {
@@ -378,9 +449,9 @@ header .menu-toggle {
 .content .sidebar .section {
   background: white;
   padding: 20px;
-  border-radius: 2px;
   margin-bottom: 20px;
   margin-left: 5px;
+  border-radius: 15px;
 }
 
 .content .sidebar .section .section-title {
