--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,6 @@ header ul li {
   float: left;
   position: relative;
   font-weight: bold;
-  font-size: 1.125rem;
 }
 
 header ul li i {
@@ -140,7 +139,7 @@ header ul li i {
 /* Specifically goes to the second ul tag, for the drop down menu */
 header ul li ul {
   position: absolute;
-  top: 66px;
+  top: 60px;
   right: 0px;
   width: 180px;
   display: none;
@@ -159,7 +158,7 @@ header ul li ul li {
 header ul li ul li a {
   padding: 10px;
   color: #111111;
-  background: white;
+  background: rgb(222, 222, 222);
 }
 
 header ul li ul li a.Logout {
@@ -215,6 +214,7 @@ header .menu-toggle {
   min-height: 100%;
 }
 
+
 .page-wrapper a:hover {
   color: #3d627e;
 }
@@ -241,7 +241,6 @@ header .menu-toggle {
 .post-slider {
   position: relative;
   background-color: #FFBC4B;
-  display:flex;
 }
 
 .post-slider .slider-title {
@@ -268,10 +267,9 @@ header .menu-toggle {
 }
 
 .post-slider .post-wrapper {
-  aspect-ratio: 1/1;
-  width: 600px;
+  width: 84%;
   /* height causes the background-color height*/
-  height: 750px;
+  height: 550px;
   margin: 0% auto;
   overflow: hidden;
   padding: 10px 0px 10px 0px;
@@ -287,14 +285,15 @@ header .menu-toggle {
   background: #FFBC4B;
   text-transform: none;
   border-radius: 10px;
+  box-shadow: 1rem 1rem -1rem -1rem;
 }
 
 .post-slider .post-wrapper .post .slider-image {
-  width: 500px;
-  height: 500px;
+  width: 100%;
+  height: 350px;
   position: relative;
   top: -100px;
-  box-shadow: rgba(0, 0, 0, 0.4) 2px 5px 27px;
+  border-radius: 10px;
 
 }
 
@@ -320,6 +319,8 @@ header .menu-toggle {
   float: left;
 }
 
+
+
 .content .main-content.single {
   background: #f3f8fa;
   padding: 20px 50px;
@@ -335,12 +336,17 @@ header .menu-toggle {
   max-height: 100%;
 }
 
+.content .main-content.single .post-content{
+  text-align: left;
+}
+
 .content .main-content.single .post-title {
   text-align: center;
   margin-bottom: 10px;
 }
 
 .content .main-content .recent-post-title {
+
   margin: 20px;
 }
 
@@ -615,7 +621,7 @@ header .menu-toggle {
 }
 
 .footer .footer-content .about h1 span {
-  color: #4da8da;
+  color: #FFBC4B;
 }
 
 .footer .footer-content .about .contact span {
@@ -674,8 +680,23 @@ header .menu-toggle {
 
 .footer .footer-content .contact-form .contact-btn {
   float: right;
-  font-size: 1.1em;
-  font-family: "Lora", serif;
+  content: "\27A4";
+  font-family: Hack, monospace;
+  background: #FFBC4B;
+  border: 1px solid #12232e;
+  color: #2c2d36 !important;
+  cursor: pointer;
+  font-size: 1em;
+  padding: 0.75rem;
+  transition: all 0.5s;
+  border-radius: 50px;
+}
+
+.footer .footer-content .contact-form .contact-btn:hover {
+  background: #c0851e;
+  transition: all 0.5s;
+  padding: 0.75rem 2.25rem 0.75rem 0.45rem;
+  color: whitesmoke !important;
 }
 
 .footer .footer-bottom {
@@ -734,15 +755,31 @@ WHEN VIEWED ON MOBILE DEVICES */
   }
 
   .post-slider .next {
-    top: 11%;
+    top: 50%;
   }
 
   .post-slider .prev {
-    top: 11%;
+    top: 50%;
   }
 
   .auth-content {
     width: 50%;
+  }
+
+  .content .main-content .post .read-more {
+    color: #000000 !important;
+  }
+
+  .content .main-content .post .read-more::after {
+    display: none;
+  }
+
+  .content .main-content .post .read-more:hover {
+    position: static;
+  }
+
+  .content .main-content .post .read-more:hover::after {
+    display: none;
   }
 }
 
@@ -757,14 +794,15 @@ WHEN VIEWED ON MOBILE DEVICES */
 
   header ul {
     width: 100%;
-    background: #152733;
+    background: #b18334;
     max-height: 0px;
     overflow: hidden;
+    color: white !important;
   }
 
   .showing {
     max-height: 100em;
-    transition: all 1s;
+    transition: all 1.0s;
   }
 
   header ul li {
@@ -780,7 +818,7 @@ WHEN VIEWED ON MOBILE DEVICES */
   header ul li ul li a {
     padding: 10px;
     color: white;
-    background: #152733;
+    background: #b18334;
     padding-left: 50px;
   }
 
@@ -810,17 +848,21 @@ WHEN VIEWED ON MOBILE DEVICES */
   }
 
   .post-slider .next {
-    top: 10%;
+    top: 50%;
     right: 10px;
   }
 
   .post-slider .prev {
-    top: 10%;
+    top: 50%;
     left: 10px;
   }
 
   .auth-content {
     width: 60%;
+  }
+
+  .post-slider {
+    position: static;
   }
 }
 
@@ -844,13 +886,11 @@ WHEN VIEWED ON MOBILE DEVICES */
   }
 
   .post-slider .next {
-    top: 7%;
-    right: 10px;
+   display: none;
   }
 
   .post-slider .prev {
-    top: 7%;
-    left: 10px;
+    display: none;
   }
 
   .content .main-content.single {
